# rgeocoder

./: .gitignore  .travis.yml  CONTRIBUTING.rst  Cargo.toml  HISTORY.md  HISTORY.rst  MANIFEST.in  Makefile  README.md  README.rst  appveyor.yml  pyproject.toml  requirements_dev.txt  scikit-ci.yml  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: CI.yml  docs.yml
ci/: manylinux_build_wheel.sh  pyinstall.sh  pypi_upload.sh  script.sh
pyrreverse/: __init__.py  _errors.py  exceptions.py
python/rgeocoder/: __init__.py  exceptions.py
rgeocoder/: __init__.py
rgeocoder/rust/: Cargo.toml
rgeocoder/rust/src/: geocoder.rs  lib.rs
src/: geocoder.rs  lib.rs
tests/: test_pyrreverse.py  test_reverse_geocoder.py  test_rgeocoder.py
