[package]
name = "pyrreverse"
version = "0.1.0"
authors = ["Philippe V. <philippe@arcadian.be>"]

[lib]
name = "pyrreverse"
crate-type = ["cdylib"]

[dependencies]
kdtree = "0.4.0"
quick-csv = "0.1.6"
rustc-serialize = "0.3.22"
failure = "0.1.1"

[dependencies.pyo3]
version = "0.2.6"
# features = ["extension-module"]
