[package]
name = "rgeocoder"
edition = "2021"
version = "0.1.6"
authors = ["Phil V. <philippe@arcadian.be>"]

[lib]
# crate-type = ["dylib"]
name = "rgeocoder"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
kdtree = "0.7.0"
thiserror = "1.0"
csv = "1.2.2"
serde = { version = "1.0.188", features = ["derive"] }
