[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[project]
name = "rgeocoder"
version = "0.1.3"
description = "A lightweight offline reverse geocoder implemented in Rust."
readme = "README.rst"
license = {text = "MIT"}
authors = [
    {name = "Phil V.", email = "philippe@arcadian.be"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    'Programming Language :: Python :: 3',
]
[project.urls]
"Source" = "https://github.com/Phil-V/rgeocoder"

requires-python = ">=3.7"


[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "rgeocoder._rgeocoder"