[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[project]
name = "rgeocoder"
version = "0.1.6"
description = "A lightweight offline reverse geocoder implemented in Rust."
readme = "README.rst"
requires-python = ">=3.7"
license = {text = "MIT"}
keywords = ["reverse-geocoder", "reverse-geocoding", "geocoder", "maturin", "pyo3"]
authors = [
    {name = "Phil V.", email = "philippe@arcadian.be"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
[project.urls]
"Documentation" = "https://phil-v.github.io/rgeocoder/"
"Repository" = "https://github.com/Phil-V/rgeocoder"
"History" = "https://github.com/Phil-V/rgeocoder/blob/master/HISTORY.rst"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "rgeocoder._rgeocoder"