[package]
name = "rgeocoder"
version = "0.1.1"
authors = ["Phil V. <philippe@arcadian.be>"]

[lib]
# crate-type = ["dylib"]
name = "rgeocoder"
crate-type = ["cdylib"]

[dependencies]
kdtree = "0.4.0"
quick-csv = "0.1.6"
rustc-serialize = "0.3.22"
failure = "0.1.1"

[dependencies.pyo3]
version = "0.2.6"
